--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="cancel">Cancel</string>
     <string name="clear">Clear</string>
     <string name="apply">Apply</string>
+    <string name="fab">fab</string>
 </resources>
